<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:layout_marginStart="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:id="@+id/cancel_p_rg"/>
        <TextView
            android:id="@+id/tv_pfsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_color"
            android:textSize="20dp"
            android:text="@string/submit"
            android:clickable="true"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/head_image"
            android:layout_marginTop="30dp"
            android:src="@drawable/immale"
            android:clickable="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/icon_nick"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_nick"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_nick"
                android:hint="@string/nick"
                android:id="@+id/et_nickname"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:maxEms="10"
                android:typeface="monospace"
                android:textColorHighlight="#000"
                android:textStyle="bold"
                android:textSize="15dp"
                android:singleLine="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/icon_psw"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_psw"/>

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_psw"
                android:id="@+id/et_password1"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:minEms="6"
                android:hint="@string/password"
                android:typeface="monospace"
                android:textColorHighlight="#000"
                android:textStyle="bold"
                android:textSize="15dp"
                android:maxEms="12"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/icon_psw2"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/again"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon_psw2"
                android:id="@+id/et_password2"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:hint="@string/once"
                android:typeface="monospace"
                android:textColorHighlight="#000"
                android:textStyle="bold"
                android:textSize="15dp"
                android:minEms="6"
                android:maxEms="12"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/icon_sex"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_sex"/>
            <RadioGroup
                android:layout_marginLeft="10dp"
                android:id="@+id/rg_sex"
                android:layout_toRightOf="@id/icon_sex"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:drawableRight="@drawable/icon_male"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/icon_female"
                    android:text="@string/female" />
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/icon_birth"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_birth"/>
           <EditText
               android:layout_marginLeft="10dp"
               android:id="@+id/et_birth"
               android:layout_toRightOf="@id/icon_birth"
               android:hint="@string/birthday"
               android:typeface="monospace"
               android:textColorHighlight="#000"
               android:textStyle="bold"
               android:textSize="15dp"
               android:layout_width="230dp"
               android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/icon_info"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_info"/>
            <EditText
                android:layout_marginLeft="10dp"
                android:typeface="monospace"
                android:textColorHighlight="#000"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_toRightOf="@id/icon_info"
                android:hint="@string/information"
                android:gravity="top|left"
                android:id="@+id/et_intro"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:lines="5"/>
        </RelativeLayout>

    </LinearLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/reg_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicator="BallPulse"
        app:indicator_color="@color/colorAccent"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:elevation="10dp"
        />

</RelativeLayout>