<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7d0000"
        android:id="@+id/boom_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_alignParentLeft="true"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:id="@+id/boom_cancel"
            android:clickable="true"
            android:drawableLeft="@drawable/back"
            android:layout_centerVertical="true"/>
        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_title"
            android:textSize="25dp"
            android:layout_centerInParent="true"
            android:textColor="@color/text"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/boom_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_alignParentRight="true"
            android:text="@string/publish"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/boom_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_boom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:textSize="25dp"
                android:text="@string/text_title"/>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:id="@+id/et_boom_t"
                    android:textAlignment="center"
                    android:typeface="monospace"
                    android:singleLine="true"
                    android:maxEms="20"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="#000"
                    android:hint="@string/text_title"/>
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_below="@id/card1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
               <ScrollView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content">
                   <EditText
                       android:layout_marginLeft="10dp"
                       android:layout_marginRight="10dp"
                       android:id="@+id/et_boom_c"
                       android:hint="@string/hot_content"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="top|left"
                       android:maxLines="18"
                       android:background="@null"
                       android:minLines="3"/>
               </ScrollView>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="10dp">
                    <ImageView
                        android:id="@+id/boom_pic1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:adjustViewBounds="true"
                        android:maxWidth="100dp"
                        android:maxHeight="100dp"
                        android:longClickable="false"
                        android:clickable="true"/>
                    <ImageView
                        android:id="@+id/boom_pic2"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="100dp"
                        android:longClickable="false"
                        android:maxHeight="100dp"
                        android:clickable="true"/>
                    <ImageView
                        android:id="@+id/boom_pic3"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:longClickable="false"
                        android:adjustViewBounds="true"
                        android:maxWidth="100dp"
                        android:maxHeight="100dp"
                        android:clickable="true"/>
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/boom_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:id="@+id/badd_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_image"/>
                <TextView
                    android:id="@+id/boom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:text="0/200"
                    android:layout_margin="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/black_semi_transparent"/>
            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/bao_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicator="BallPulse"
        app:indicator_color="@color/colorAccent"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:elevation="10dp"
        />
</RelativeLayout>
